--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dependencies": {
         "antd": "^3.11.6",
         "flyio": "^0.6.7",
+        "rc-queue-anim": "^1.6.10",
+        "rc-tween-one": "^2.2.21",
         "react": "^16.7.0",
         "react-dom": "^16.7.0",
         "react-loadable": "^5.5.0",
